# HexDummyExample

./: .copier-answers.yml  README.md  build.gradle.kts  gradle.properties  pyproject.toml  settings.gradle.kts  update.py
.github/workflows/: build.yml  release.yml
buildSrc/src/main/kotlin/hexdummyexample/: java.gradle.kts  minecraft.gradle.kts  mod-publish.gradle.kts  platform.gradle.kts
buildSrc/src/main/kotlin/hexdummyexample/utils/: mod-dependencies.gradle.kts
common/: build.gradle.kts
common/src/main/kotlin/io/github/objectobject/hexdummyexample/: Hexdummyexample.kt  HexdummyexampleAbstractions.kt  HexdummyexampleClient.kt
common/src/main/resources/: architectury.common.json  hexdummyexample-common.mixins.json
common/src/main/resources/assets/hexdummyexample/lang/: en_us.flatten.json5
doc/: README.md  hexdoc.toml
doc/resources/assets/hexdummyexample/lang/: en_us.flatten.json5
doc/src/hexdoc_hexdummyexample/: _hooks.py
docs/: index.html
docs/meta/: sitemap-minecraft.json  sitemap.json
docs/v/0.1.0+1.20.1/: index.html
docs/v/0.1.0+1.20.1/1.0/en_us/: .sitemap-marker.json  index.html
docs/v/0.1.0+1.20.1/1.0/en_us/basics/: index.html
docs/v/0.1.0+1.20.1/1.0/en_us/casting/: index.html
docs/v/0.1.0+1.20.1/1.0/en_us/creative_unlocker/: index.html
docs/v/0.1.0+1.20.1/1.0/en_us/greatwork/: index.html
docs/v/0.1.0+1.20.1/1.0/en_us/interop/: index.html
docs/v/0.1.0+1.20.1/1.0/en_us/items/: index.html
docs/v/0.1.0+1.20.1/1.0/en_us/lore/: index.html
docs/v/0.1.0+1.20.1/1.0/en_us/patterns/: index.html
docs/v/0.1.0+1.20.1/1.0/en_us/patterns/great_spells/: index.html
docs/v/0.1.0+1.20.1/1.0/en_us/patterns/spells/: index.html
docs/v/0.1.0+1.20.1/1.0/en_us/patterns/spells/dummy_spells/: index.html
docs/v/0.1.0+1.20.1/1.1/en_us/: .sitemap-marker.json  index.html  index.js
docs/v/0.1.0+1.20.1/1.1/en_us/basics/: index.html
docs/v/0.1.0+1.20.1/1.1/en_us/casting/: index.html
docs/v/0.1.0+1.20.1/1.1/en_us/creative_unlocker/: index.html
docs/v/0.1.0+1.20.1/1.1/en_us/greatwork/: index.html
docs/v/0.1.0+1.20.1/1.1/en_us/interop/: index.html
docs/v/0.1.0+1.20.1/1.1/en_us/items/: index.html
docs/v/0.1.0+1.20.1/1.1/en_us/lore/: index.html
docs/v/0.1.0+1.20.1/1.1/en_us/patterns/: index.html
docs/v/0.1.0+1.20.1/1.1/en_us/patterns/great_spells/: index.html
docs/v/0.1.0+1.20.1/1.1/en_us/patterns/spells/: index.html
docs/v/0.1.0+1.20.1/en_us/: index.html
docs/v/latest/main/en_us/: .sitemap-marker.json  index.html  index.js
docs/v/latest/main/en_us/basics/: index.html
docs/v/latest/main/en_us/casting/: index.html
docs/v/latest/main/en_us/creative_unlocker/: index.html
docs/v/latest/main/en_us/greatwork/: index.html
docs/v/latest/main/en_us/interop/: index.html
docs/v/latest/main/en_us/items/: index.html
docs/v/latest/main/en_us/lore/: index.html
docs/v/latest/main/en_us/patterns/: index.html
docs/v/latest/main/en_us/patterns/great_spells/: index.html
docs/v/latest/main/en_us/patterns/spells/: index.html
fabric/: build.gradle.kts
fabric/src/main/resources/: fabric.mod.json  hexdummyexample-fabric.mixins.json
forge/: build.gradle.kts
forge/src/main/resources/: hexdummyexample-forge.mixins.json  pack.mcmeta
gradle/: libs.versions.toml
(+38 files in other folders)
